--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
   <canvas id="gameCanvas" width="400" height="400"></canvas>
   <div id="score">Score: 0</div>
 <button onclick="restartGame()" style="margin-top: 10px; padding: 10px 20px; font-size: 16px;">Restart</button>
-  <script>
+  <script src="script.js"></script>
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d
