--- a/index.html
+++ b/index.html
@@ -1,42 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Snake Game by Jake</title>
   <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
     body {
-      background-color: #121212;
+      background-color: #111;
       color: white;
       font-family: 'Segoe UI', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding-top: 30px;
+      padding: 20px;
     }
-
     h1 {
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
-
     canvas {
       background-color: #222;
-      border: 2px solid #0f0;
+      border: 2px solid lime;
+      border-radius: 8px;
     }
-
     #score {
-      margin-top: 10px;
+      margin: 10px 0;
       font-size: 18px;
     }
-
-    button {
-      margin-top: 15px;
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 20px;
+    }
+    .row {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
+    .btn {
+      background-color: #444;
+      color: white;
+      font-size: 20px;
       padding: 10px 20px;
-      background-color: #0f0;
       border: none;
-      color: black;
-      font-weight: bold;
-      cursor: pointer;
       border-radius: 8px;
+      cursor: pointer;
+      width: 60px;
+    }
+    #restartBtn {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #f00;
+      border: none;
+      border-radius: 6px;
+      color: white;
+      font-size: 16px;
     }
   </style>
 </head>
@@ -44,8 +67,101 @@
   <h1>Snake Game by Jake</h1>
   <canvas id="gameCanvas" width="400" height="400"></canvas>
   <div id="score">Score: 0</div>
-  <button onclick="restartGame()">Restart Game</button>
 
-  <script src="script.js"></script>
+  <div class="buttons">
+    <div class="row">
+      <button class="btn" onclick="changeDirection('UP')">↑</button>
+    </div>
+    <div class="row">
+      <button class="btn" onclick="changeDirection('LEFT')">←</button>
+      <button class="btn" onclick="changeDirection('DOWN')">↓</button>
+      <button class="btn" onclick="changeDirection('RIGHT')">→</button>
+    </div>
+  </div>
+
+  <button id="restartBtn" onclick="location.reload()">Restart Game</button>
+
+  <script>
+    const canvas = document.getElementById("gameCanvas");
+    const ctx = canvas.getContext("2d");
+    const box = 20;
+    let score = 0;
+
+    let snake = [{ x: 9 * box, y: 10 * box }];
+    let food = {
+      x: Math.floor(Math.random() * (canvas.width / box)) * box,
+      y: Math.floor(Math.random() * (canvas.height / box)) * box
+    };
+
+    let direction = null;
+
+    function changeDirection(dir) {
+      if (dir === "LEFT" && direction !== "RIGHT") direction = "LEFT";
+      else if (dir === "UP" && direction !== "DOWN") direction = "UP";
+      else if (dir === "RIGHT" && direction !== "LEFT") direction = "RIGHT";
+      else if (dir === "DOWN" && direction !== "UP") direction = "DOWN";
+    }
+
+    document.addEventListener("keydown", event => {
+      if (event.key === "ArrowLeft") changeDirection("LEFT");
+      if (event.key === "ArrowUp") changeDirection("UP");
+      if (event.key === "ArrowRight") changeDirection("RIGHT");
+      if (event.key === "ArrowDown") changeDirection("DOWN");
+    });
+
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // Draw snake
+      for (let i = 0; i < snake.length; i++) {
+        ctx.fillStyle = i === 0 ? "lime" : "green";
+        ctx.beginPath();
+        ctx.arc(snake[i].x + box/2, snake[i].y + box/2, box/2 - 2, 0, Math.PI * 2);
+        ctx.fill();
+      }
+
+      // Draw food
+      ctx.fillStyle = "red";
+      ctx.beginPath();
+      ctx.arc(food.x + box/2, food.y + box/2, box/2 - 2, 0, Math.PI * 2);
+      ctx.fill();
+
+      // Move
+      let headX = snake[0].x;
+      let headY = snake[0].y;
+
+      if (direction === "LEFT") headX -= box;
+      if (direction === "UP") headY -= box;
+      if (direction === "RIGHT") headX += box;
+      if (direction === "DOWN") headY += box;
+
+      // Eat food
+      if (headX === food.x && headY === food.y) {
+        score++;
+        food = {
+          x: Math.floor(Math.random() * (canvas.width / box)) * box,
+          y: Math.floor(Math.random() * (canvas.height / box)) * box
+        };
+      } else {
+        snake.pop();
+      }
+
+      let newHead = { x: headX, y: headY };
+
+      // Game over
+      if (
+        headX < 0 || headY < 0 || headX >= canvas.width || headY >= canvas.height ||
+        snake.some(segment => segment.x === headX && segment.y === headY)
+      ) {
+        clearInterval(game);
+        alert("Game Over!");
+      }
+
+      snake.unshift(newHead);
+      document.getElementById("score").textContent = "Score: " + score;
+    }
+
+    let game = setInterval(draw, 150);
+  </script>
 </body>
 </html>
