--- a/index.html
+++ b/index.html
@@ -5,61 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Snake Game by Jake</title>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
     body {
-      background-color: #111;
+      background-color: #121212;
       color: white;
       font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
-    }
-    h1 {
-      margin-bottom: 15px;
+      text-align: center;
     }
     canvas {
-      background-color: #222;
-      border: 2px solid lime;
-      border-radius: 8px;
+      background-color: #1e1e1e;
+      border: 3px solid lime;
+      margin-top: 20px;
+    }
+    #controls {
+      margin-top: 15px;
+    }
+    button {
+      margin: 5px;
+      padding: 10px 20px;
+      background-color: #0f0;
+      border: none;
+      border-radius: 5px;
+      color: #000;
+      font-weight: bold;
     }
     #score {
-      margin: 10px 0;
+      margin-top: 10px;
       font-size: 18px;
-    }
-    .buttons {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-top: 20px;
-    }
-    .row {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-    }
-    .btn {
-      background-color: #444;
-      color: white;
-      font-size: 20px;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      width: 60px;
-    }
-    #restartBtn {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #f00;
-      border: none;
-      border-radius: 6px;
-      color: white;
-      font-size: 16px;
     }
   </style>
 </head>
@@ -67,46 +38,40 @@
   <h1>Snake Game by Jake</h1>
   <canvas id="gameCanvas" width="400" height="400"></canvas>
   <div id="score">Score: 0</div>
-
-  <div class="buttons">
-    <div class="row">
-      <button class="btn" onclick="changeDirection('UP')">↑</button>
-    </div>
-    <div class="row">
-      <button class="btn" onclick="changeDirection('LEFT')">←</button>
-      <button class="btn" onclick="changeDirection('DOWN')">↓</button>
-      <button class="btn" onclick="changeDirection('RIGHT')">→</button>
-    </div>
+  <div id="controls">
+    <button onclick="direction='LEFT'">←</button>
+    <button onclick="direction='UP'">↑</button>
+    <button onclick="direction='DOWN'">↓</button>
+    <button onclick="direction='RIGHT'">→</button>
   </div>
+  <button onclick="location.reload()">Restart Game</button>
 
-  <button id="restartBtn" onclick="location.reload()">Restart Game</button>
+  <!-- Sound Effects -->
+  <audio id="eatSound" src="https://actions.google.com/sounds/v1/cartoon/pop.ogg" preload="auto"></audio>
+  <audio id="deadSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
 
   <script>
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
+
     const box = 20;
     let score = 0;
-
     let snake = [{ x: 9 * box, y: 10 * box }];
+    let direction;
+
     let food = {
-      x: Math.floor(Math.random() * (canvas.width / box)) * box,
-      y: Math.floor(Math.random() * (canvas.height / box)) * box
+      x: Math.floor(Math.random() * 20) * box,
+      y: Math.floor(Math.random() * 20) * box
     };
 
-    let direction = null;
-
-    function changeDirection(dir) {
-      if (dir === "LEFT" && direction !== "RIGHT") direction = "LEFT";
-      else if (dir === "UP" && direction !== "DOWN") direction = "UP";
-      else if (dir === "RIGHT" && direction !== "LEFT") direction = "RIGHT";
-      else if (dir === "DOWN" && direction !== "UP") direction = "DOWN";
-    }
+    const eatSound = document.getElementById("eatSound");
+    const deadSound = document.getElementById("deadSound");
 
     document.addEventListener("keydown", event => {
-      if (event.key === "ArrowLeft") changeDirection("LEFT");
-      if (event.key === "ArrowUp") changeDirection("UP");
-      if (event.key === "ArrowRight") changeDirection("RIGHT");
-      if (event.key === "ArrowDown") changeDirection("DOWN");
+      if (event.key === "ArrowLeft" && direction !== "RIGHT") direction = "LEFT";
+      else if (event.key === "ArrowUp" && direction !== "DOWN") direction = "UP";
+      else if (event.key === "ArrowRight" && direction !== "LEFT") direction = "RIGHT";
+      else if (event.key === "ArrowDown" && direction !== "UP") direction = "DOWN";
     });
 
     function draw() {
@@ -114,54 +79,54 @@
 
       // Draw snake
       for (let i = 0; i < snake.length; i++) {
-        ctx.fillStyle = i === 0 ? "lime" : "green";
-        ctx.beginPath();
-        ctx.arc(snake[i].x + box/2, snake[i].y + box/2, box/2 - 2, 0, Math.PI * 2);
-        ctx.fill();
+        ctx.fillStyle = i === 0 ? "lime" : "lightgreen";
+        ctx.fillRect(snake[i].x, snake[i].y, box, box);
       }
 
       // Draw food
       ctx.fillStyle = "red";
       ctx.beginPath();
-      ctx.arc(food.x + box/2, food.y + box/2, box/2 - 2, 0, Math.PI * 2);
+      ctx.arc(food.x + box / 2, food.y + box / 2, box / 2.5, 0, Math.PI * 2);
       ctx.fill();
 
-      // Move
+      // Move snake
       let headX = snake[0].x;
       let headY = snake[0].y;
 
       if (direction === "LEFT") headX -= box;
-      if (direction === "UP") headY -= box;
       if (direction === "RIGHT") headX += box;
+      if (direction === "UP") headY -= box;
       if (direction === "DOWN") headY += box;
+
+      // Game over
+      if (
+        headX < 0 || headX >= canvas.width ||
+        headY < 0 || headY >= canvas.height ||
+        snake.some(segment => segment.x === headX && segment.y === headY)
+      ) {
+        deadSound.play();
+        clearInterval(game);
+      }
+
+      let newHead = { x: headX, y: headY };
 
       // Eat food
       if (headX === food.x && headY === food.y) {
         score++;
+        document.getElementById("score").innerText = "Score: " + score;
+        eatSound.play();
         food = {
-          x: Math.floor(Math.random() * (canvas.width / box)) * box,
-          y: Math.floor(Math.random() * (canvas.height / box)) * box
+          x: Math.floor(Math.random() * 20) * box,
+          y: Math.floor(Math.random() * 20) * box
         };
       } else {
         snake.pop();
       }
 
-      let newHead = { x: headX, y: headY };
-
-      // Game over
-      if (
-        headX < 0 || headY < 0 || headX >= canvas.width || headY >= canvas.height ||
-        snake.some(segment => segment.x === headX && segment.y === headY)
-      ) {
-        clearInterval(game);
-        alert("Game Over!");
-      }
-
       snake.unshift(newHead);
-      document.getElementById("score").textContent = "Score: " + score;
     }
 
-    let game = setInterval(draw, 150);
+    const game = setInterval(draw, 150);
   </script>
 </body>
 </html>
