--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
   <h1>Snake Game by Jake</h1>
   <canvas id="gameCanvas" width="400" height="400"></canvas>
   <div id="score">Score: 0</div>
-
+<button onclick="restartGame()" style="margin-top: 15px; padding: 10px 20px; font-size: 16px; background: #0f0; color: #000; border: none; border-radius: 8px; cursor: pointer;">
+  Restart Game
+</button>
   <!-- On-screen arrow keys -->
   <div class="controls">
     <div class="controls-row">
